Fix terms overlapping when two terms are put together

--- a/src/show-your-terms.sass
+++ b/src/show-your-terms.sass
@@ -47,9 +47,12 @@ $term-default-padding: 14px
     background-color: $term-color-header
     position: absolute
     content: ''
-    top: 100%
+    /* top: 100%
+    bottom: -1px
     width: 100%
-    margin-top: -$term-border-radius / 2
+    margin-top: 0
+    /* margin-top: -$term-border-radius / 2
+    margin-bottom: 0
     border-radius: 0 0 $term-border-radius $term-border-radius
     font-size: 12px
     
